fixed button spacing issue

--- a/src/app/grid/grid.component.scss
+++ b/src/app/grid/grid.component.scss
@@ -1,15 +1,12 @@
 #grid {
     width: max-content;
     margin: 0 auto;
-    // text-align: center;
-    border-style: double;
-    border-width: 3px;
 }
 
 button {
+    float: left;
     width: 30px;
     height: 30px;
     margin: 0 auto;
     text-align: center;
-    // background-color: green
 }
